Gnome: Fix unreadable text in calendar events

--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -5525,6 +5525,16 @@ window.background.budgie-settings-window.csd > box.horizontal > stack > scrolled
   #gnc-id-main-window .arrow.button.toggle:hover {
     border-color: #45b3be; }
 
+/*******************
+ * Calendar events *
+********************/
+.color-light.timed label {
+  color: #F3F4F6;
+  opacity: 1; }
+.week-view .color-light.timed label, .color-light label, .year-view .color-light:not(.timed) label {
+  color: #1a191d;
+  opacity: 1; }
+
 .xfce4-panel {
   border-radius: 0; }
   .xfce4-panel.panel {
